<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ExerciseTypeListFragment">

    <fragment
        android:id="@+id/ExerciseTypeListFragment"
        android:name="ru.guybydefault.powergain.fragments.ExerciseTypeListFragment"
        android:label="@string/fragment_name_exercise_types"
        tools:layout="@layout/fragment_exercises_types_list">

        <action
            android:id="@+id/action_types_to_trainings"
            app:destination="@id/ExerciseTrainingsFragment" />
        <action
            android:id="@+id/action_types_to_charts"
            app:destination="@id/ChartFragment" />
        <action
            android:id="@+id/action_types_to_create_exercise_type"
            app:destination="@id/CreateExerciseTypeFragment" />
        <action
            android:id="@+id/action_types_to_create_training"
            app:destination="@id/CreateTrainingFragment" />
    </fragment>
    <fragment
        android:id="@+id/ExerciseTrainingsFragment"
        android:name="ru.guybydefault.powergain.fragments.TrainingListFragment"
        android:label="@string/fragment_name_trainings"
        tools:layout="@layout/fragment_training_list">

        <argument
            android:name="exerciseTypeId"
            app:argType="integer" />
        <action
            android:id="@+id/action_trainings_to_create_training"
            app:destination="@id/CreateTrainingFragment" />
        <action
            android:id="@+id/action_trainings_to_chart"
            app:destination="@id/ChartFragment" />
    </fragment>
    <fragment
        android:id="@+id/ChartFragment"
        android:name="ru.guybydefault.powergain.fragments.ChartFragment"
        android:label="@string/fragment_name_progress"
        tools:layout="@layout/fragment_chart">
        <argument
            android:name="exerciseTypeId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/CreateExerciseTypeFragment"
        android:name="ru.guybydefault.powergain.fragments.CreateExerciseTypeFragment"
        android:label="@string/fragment_name_create_exercise_type"
        tools:layout="@layout/fragment_create_exercise_type">
        <argument
            android:name="exerciseTypeId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/CreateTrainingFragment"
        android:name="ru.guybydefault.powergain.fragments.CreateAndEditTrainingFragment"
        android:label="@string/fragment_name_create_training"
        tools:layout="@layout/fragment_create_training">
        <argument
            android:name="exerciseTypeId"
            app:argType="integer" />
        <argument
            android:name="trainingId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
</navigation>